# four_in_a_row

./: .clang-format  .gitignore  CMakeLists.txt  README.md  ref.txt  run.ps1  run.sh
src/: ansi_codes.h  cross_getch.h  field.c  field.h  field3d.c  field3d.h  main.c  solver.c  solver.h
